final push doneee

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <div class="hidey rap">
-  <h3><b></b></h3>
+  <h3><b>Wasup Y'all, slap these bangers from this Rap/Hip Hop playlist. Click on the playlist below for more!</b></h3>
   <img src="img/ishy.b.jpg" alt="Boss" width="150" height="210"  class="w3-circle w3-hover-opacity">
   <h3>Ishmael Burton</h3>
   <p>Rap/Hip-Hop Junky!</p>
